use correct conversion (android.Uri !== net.URI)